<resources>
    <string name="app_name">RentHouse</string>
    <string name="tus_casas">Your houses</string>
    <string name="error_call_API">An Error called API</string>
    <string name="add_ad_success">The ad is added success</string>
    <string name="error_add_ad">An error occurred when adding the ad. Try again.</string>
    <string name="ad_modify_success">The ad is modified success</string>
    <string name="error_modify_ad">An error occurred when modify the ad. Try again.</string>
    <string name="add_message_success">The message is added success</string>
    <string name="error_add_message">An error occurred when adding the message. Try again.</string>
    <string name="password_modify_success">The password is modified success</string>
    <string name="show_all_ads">See all the ads</string>
    <string name="show_unclosed_ads">See only unresolver ads</string>
    <string name="user_pass_error">Incorrect user or password</string>
    <string name="no_house_assigned">You currently have no home</string>
    <string name="text_type_search">Type here to search</string>
    <string name="no_data_found">Data not found</string>
    <string name="two_params_change_pass">Fill in both fields to change password</string>
    <string name="two_new_pass_different">The new password is not the same in both fields, try again</string>
    <string name="ads_house">House ads</string>
    <string name="view_all_ads_layout">See all</string>
    <string name="title">Title</string>
    <string name="add_ad_layout">Add ad</string>
    <string name="ad_description_layout">Ad description</string>
    <string name="user_data">User Data</string>
    <string name="id_house">Id House</string>
    <string name="house_address">House address</string>
    <string name="postal_code">Zip code</string>
    <string name="city_house">House city</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="messages_ad">Ad messages</string>
    <string name="tittle_ad">Ad Title</string>
    <string name="ad_description">Ad description</string>
    <string name="start_date">Start date:</string>
    <string name="start">Start</string>
    <string name="end_date">Finish date:</string>
    <string name="end">Finish</string>
    <string name="write_here_message">Write your message here...</string>
    <string name="insert_new_password">Write your new password</string>
    <string name="repeat_new_password">Repeat your new password</string>
    <string name="change_password">Change password</string>
    <string name="resolver">Finished</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip code</string>
    <string name="city">City</string>
    <string name="house">House</string>
    <string name="adds">Ads</string>
    <string name="user_wrote">User Wrote</string>
    <string name="message_date">Message date</string>
    <string name="message_time">Message time</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="change_pass">Change password</string>
    <string name="close_session">logout</string>
    <string name="house_data">House Data</string>
</resources>