<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:editTextColor="@color/white"
        android:enabled="false"
        android:icon="@drawable/search_icon"
        android:iconTint="@color/white"
        android:textColorHint="@color/white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />


    <item
        android:id="@+id/btMore"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/more"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/changePassword"
                android:background="#A49AB0BA"
                android:backgroundTint="#D337427A"
                android:icon="@android:drawable/ic_menu_info_details"
                android:iconTint="@color/white"
                android:title="@string/change_pass" />

            <item
                android:id="@+id/closeSesion"
                android:background="#A49AB0BA"
                android:backgroundTint="#D337427A"
                android:icon="@android:drawable/ic_lock_power_off"
                android:iconTint="@color/white"
                android:title="@string/close_session" />
        </menu>

    </item>


</menu>